appId: ${APP_ID}
---
- tapOn:
    text: "New record"
- tapOn:
    text: "Select item"
    below:
      text: "SPD key"
- tapOn:
    text: "1"
- inputText:
    text: "${Date.now()}"
    below:
      text: "Integer key"
- scrollUntilVisible:
    element: "Boolean"
    direction: DOWN
- scrollUntilVisible:
    element: "True"
    direction: DOWN
- tapOn:
    text: "False"
    below:
      text: "Boolean"
- assertNotVisible:
    id: "root_relevant_if_bool"
- assertNotVisible:
    id: "root_visible_if_bool"
- tapOn:
    text: "True"
    below:
      text: "Boolean"
- scrollUntilVisible:
    element:
      id: "root_relevant_if_bool"
    direction: DOWN
- assertVisible:
    id: "root_relevant_if_bool"
- tapOn:
    id: "root_relevant_if_bool"
- inputText: "123"
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "root_visible_if_bool"
    direction: DOWN
- assertVisible:
    id: "root_visible_if_bool"
- scrollUntilVisible:
    element: "Boolean"
    direction: UP
- tapOn:
    text: "False"
    below:
      text: "Boolean"
- extendedWaitUntil:
    visible:
      id: "confirm-dialog-title"
    timeout: 10000
- swipe:
    direction: RIGHT
    from:
      id: "SwipeThumb"
    duration: 1000
- tapOn:
    id: "confirm-dialog-confirm-button"
- assertNotVisible:
    id: "confirm-dialog-title"
- assertNotVisible:
    id: "root_relevant_if_bool"
- tapOn:
    text: "Records"
- tapOn:
    text: "Go to list of records"
- assertNotVisible: "No records found"
- assertVisible: "Send data"
